Support GraphViz with st.graphviz_chart() (#666)
Support GraphViz with st.graphviz_chart() #650

* Add python support for Graphviz charts

* Add GraphViz react component for displaying Graphs

* Include react modules for dagre, dagre-d3, d3, graphlib-dot

* Include default graph styling

* Support variable height and width

--- a/lib/Pipfile.locks/python-3.6.6
+++ b/lib/Pipfile.locks/python-3.6.6
@@ -1,7 +1,7 @@
 {
     "_meta": {
         "hash": {
-            "sha256": "2f7dbf5465353b6456b037654d746a318798b4b3095ccbf8479a0cc3279b5f3b"
+            "sha256": "990546a20ca43bf2386ea1679d308ac8df663b428dcf4e38d9623fc8b39a303d"
         },
         "pipfile-spec": 6,
         "requires": {},
@@ -101,6 +101,14 @@
             "index": "pypi",
             "markers": "python_version < '3.0'",
             "version": "==3.1.1"
+        },
+        "graphviz": {
+            "hashes": [
+                "sha256:0e1744a45b0d707bc44f99c7b8e5f25dc22cf96b6aaf2432ac308ed9822a9cb6",
+                "sha256:d311be4fddfe832a56986ac5e1d6e8715d7fcb0208560da79d1bb0f72abef41f"
+            ],
+            "index": "pypi",
+            "version": "==0.10.1"
         },
         "jmespath": {
             "hashes": [
@@ -972,10 +980,10 @@
         },
         "tqdm": {
             "hashes": [
-                "sha256:981544bd750360113c493bd4efb3062bb5eb6f4c0f50c0f84fd7be652f1aaf69",
-                "sha256:9b4b24510dfe8d697749cc743c173c3b7c3be78c59af43de99d451a41883e170"
+                "sha256:0a860bf2683fdbb4812fe539a6c22ea3f1777843ea985cb8c3807db448a0f7ab",
+                "sha256:e288416eecd4df19d12407d0c913cbf77aa8009d7fddb18f632aded3bdbdda6b"
             ],
-            "version": "==4.32.0"
+            "version": "==4.32.1"
         },
         "traitlets": {
             "hashes": [
